--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,8 @@
 body {
   background-color: #f7f7f7;
   color: #06174e;
-  margin: 0; /* Remove default margin to ensure header stretches across the full width */
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-  'Helvetica Neue', Arial, sans-serif;
-
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 }
 
 header {
@@ -12,10 +10,9 @@ header {
   color: white;
   padding: 20px;
   text-align: center;
-  width: 100%; /* Make the header take up the full width of the viewport */
+  width: 100%;
 }
 
-/* The rest of your CSS remains unchanged */
 nav {
   display: flex;
   justify-content: center;
@@ -44,17 +41,7 @@ nav a:hover {
   h1 {
     font-size: 200%;
   }
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-  p {
-    width: 100%;
-  }
-  table {
-    width: 100%;
-  }
-  iframe {
+  img, p, table, iframe {
     max-width: 100%;
     height: auto;
   }
@@ -80,11 +67,9 @@ h2 {
 .container {
    max-width: 1080px;
    margin: 0 auto;
-   padding: auto;
    margin-top: 30px;
    background-color: #fff;
    border: 1px solid #ccc;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 25px;
 }
-
