--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,10 @@ nav a:hover {
     text-align: justify;
     margin: 30px;
   }
+
+  a {
+    text-align: justify;
+  }
   table {
     width: 500px;
   }
@@ -68,8 +72,17 @@ h2 {
    max-width: 1080px;
    margin: 0 auto;
    margin-top: 30px;
+   margin-bottom: 30px;
+   align-items: center;
    background-color: #fff;
    border: 1px solid #ccc;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 25px;
+}
+
+#anthem.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
